--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src='script.js' defer></script>
     <title>Work Day Scheduler</title>
   </head>
-
+  
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
@@ -30,8 +31,9 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <container id='containers'></container>
     </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
